[tool.poetry]
name = "twitter_lang_stats_api"
version = "0.1.0"
description = "API to explore language choice from Twitter data"
authors = ["paolo gervasoni <pgervila@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
tweepy = "^3.9.0"
fastapi = "^0.61.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
